Endrer familiehendelserepo til å lagre på behandling id istf behandling for å unngå oppslag på behandling i oppdaterere